<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cpb_white">

    <TextView
        android:id="@+id/app_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="@string/app_version" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/connection_info"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/app_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/app_url"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mqtt_host_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/mqtt_host"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mqtt_login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/mqtt_login"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mqtt_client_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/mqtt_client_id"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mqtt_status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/mqtt_connection_state"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

</LinearLayout>