<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/show_user_status"
                android:layout_toStartOf="@+id/show_user_status"
                android:text="@string/show_online_status"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/show_user_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:checked="true"
                android:enabled="false" />
        </RelativeLayout>

        <TextView
            android:id="@+id/show_user_status_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_online_status_description"
            android:textColor="@color/lightGrey"
            android:textSize="12sp" />

    </LinearLayout>

    <include layout="@layout/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/send_seen_status"
                android:layout_toStartOf="@+id/send_seen_status"
                android:text="@string/send_seen_status"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/send_seen_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:checked="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_seen_status_description"
            android:textColor="@color/lightGrey"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>