<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/sf-ui-display-light.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:maxWidth="200dp"
            android:text="@string/please_confirm_your_country_code_and_enter_your_phone_number"
            android:textColor="@color/tundora"
            android:textSize="15sp" />

        <include layout="@layout/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/flag_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                tools:src="@drawable/flag_de" />

            <TextView
                android:id="@+id/country_name"
                fontPath="fonts/sf-ui-display-light.otf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:freezesText="true"
                android:lines="1"
                android:textColor="@color/tundora"
                android:textSize="16sp"
                tools:text="Germany" />

            <Button
                android:id="@+id/country_select_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/manatee"
                android:minHeight="32dp"
                android:minWidth="48dp"
                android:rotation="180"
                android:textSize="22sp" />

        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <EditText
                android:id="@+id/phone_code_txt"
                fontPath="fonts/sf-ui-display-light.otf"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:freezesText="true"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="4"
                android:minEms="2"
                android:textColor="@color/tundora"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:inputType="numberSigned"
                tools:text="+499" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/manatee" />

            <EditText
                android:id="@+id/phone_edit"
                fontPath="fonts/sf-ui-display-light.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:inputType="phone|textNoSuggestions"
                android:padding="4dp"
                android:textColor="@color/tundora"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>

        <include layout="@layout/separator" />

        <Button
            android:id="@+id/enter_phone_btn"
            fontPath="fonts/sf-ui-display-light.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/submit_button_selector"
            android:enabled="false"
            android:minHeight="40dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/confirm_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_agreement"
            fontPath="fonts/sf-ui-display-light.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:clickable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy"
            android:textColor="@color/manatee"
            android:textColorLink="@color/malibu"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>